# pyWATS

./: .MANDATORY_WORKFLOW.md  .deployment_instructions.md  .dockerignore  .docs_instructions.md  .env.example  .env.template  .flake8  .gitattributes  .gitignore  .instruction_loading_rules.md  .instruction_manifest.md  .markdownlint.json  .markdownlintignore  .readthedocs.yml  .source_code_instructions.md  .test_instructions.md  ACTIVE_WORK.md  ALIAS_REVIEW.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE_REFACTORING.md  BUG_TRACKING.md  CHANGELOG-BETA.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLIENT_GUI_UPDATES.md  CLIENT_SERVICE_INFRASTRUCTURE_ANALYSIS.md  CLIENT_SERVICE_REFACTORING_STATUS.md  CLOUD_AGENT_PR4_VALIDATION.md  CODE_QUALITY_SUMMARY.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CONVERTER_REFACTORING_STATUS.md  CORE_ARCHITECTURE.md  CRITICAL_TEST_REFERENCE.md  DIALOG_BUGS_FIXED.md  Dockerfile  ENVIRONMENT_SETUP_GUIDE.md  F5_DEBUGGING_GUIDE.md  GUI_MIGRATION_COMPLETE.md  (+124 more)
.github/: BRANCH_PROTECTION.md  copilot-instructions.md  pull_request_template.md
Articles/: ARTICLE_TEMPLATE.html  article_format.html  article_format_2.html
DOMAIN_STATUS/: ASSET_DOMAIN_STATUS.md  PROCESS_DOMAIN_STATUS.md  PRODUCT_DOMAIN_STATUS.md  REPORT_DOMAIN_STATUS.md  SOFTWARE_DOMAIN_STATUS.md  TEMPLATE_DOMAIN_STATUS.md
Final Assessment/: 01_API_ASSESSMENT.md  02_CLIENT_ASSESSMENT.md  03_SERVICE_ASSESSMENT.md
REPORT_MODEL_ANALYSIS/: GEMINI.md  GPT-5-Codex  GROK.md
WATSData/: processes_cache.json
api-agent-tests/: conftest.py  test_adaptive_time.py  test_agent_executor.py  test_agent_executor_v2.py  test_agent_harness.py  test_autonomy.py  test_control_panel_tool.py  test_debug_tool.py  test_dimensional_analysis.py  test_http_trace_capture.py  test_preview_policy_bounding.py  test_process_capability.py  test_root_cause_analysis.py  test_session_context.py  test_statistics_dimensions.py  test_step_analysis.py  test_subunit_tool.py  test_time_filter_conflict.py  test_tool_migration_v2_wrapped.py  test_tool_migration_wrapped.py  test_unit_tool.py  test_visualization.py  test_yield_summary_minimal.py  test_yield_tool.py
api-tests/: README.md  conftest.py  debug_boxbuild_workflow.py  test_analytics.py  test_asset_comprehensive.py  test_dynamic_repair.py  test_dynamic_yield_filter_fields.py  test_import_mode.py  test_measurement_api.py  test_report_filter_status_all.py  test_root_cause_d8.py  test_rootcause_comprehensive.py  test_server_roundtrip.py  test_software.py  test_software_comprehensive.py  test_uut_model_comprehensive.py  test_yield_tool_server.py
converters/: ai_converter.py  converter_template.py  csv_converter.py  (+9 more)
referenced_code/WATS Client Launcher/: Cargo.toml  build.rs  icons.rc
referenced_code/WATS Client Launcher/.cargo/: config.toml
referenced_code/WATS Client Launcher/src/: clientstatus.json  clientstatus.txt  main.rs
(+4398 files in other folders)
