[package]
name = "WATSTray"
version = "0.1.0"
edition = "2021"
include = ["icons/WATSBee_normal_offline.ico", "icons/WATSBee_normal_online.ico"]

[dependencies]
notify = "7.0.0"
tao = "0.31.0"
tray-icon = "0.19.2"
log = "0.4"
once_cell = "1.19"
chrono = "0.4"
runas = "1.0"
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"  # Tao already depends on this
widestring = "0.5"


[build-dependencies]
embed-resource = "2.3"

[package.metadata.winres]
WindowsSubsystem = "Windows"